--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     implementation 'com.github.open-android:JieCaoVideoPlayer:0.1.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation files('libs/commons-io-2.5.jar')
+    implementation 'com.github.huangdali:HPermission:v1.0.4'
 }
